data/all_generated_tests/raw_wast_tests/unreachable_StackCorruption_1008.wast
;; 9. **Interleaved `unreachable` in Multiple Control Structures:**    - **Description:** Interleave `unreachable` instructions within multiple nested control structures (`block`, `loop`, `if`) for stack state evaluation.    - **Constraint:** Ensure each control structure maintains stack integrity upon encountering `unreachable`.    - **Relation to Stack Corruption:** Checks consistency in nested control flows.

(assert_invalid
  (module (func $interleaved-unreachable-nested-control-structures
    (block 
      (loop 
        (if (i32.const 1)
          (then (unreachable))
          (else 
            (block 
              (loop
                (i32.const 0)
                (if (i32.const 0)
                  (then (unreachable))
                )
              )
            )
          )
        )
      )
    )
  ))
  "type mismatch"
)